src/objects/Display__c.object
<CustomObject>
    <fields>
        <fullName>Board__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepts Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Position</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Displays</relationshipLabel>
        <relationshipName>Displays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Size</valueSetName>
        </valueSet>
    </fields>
    <label>Display</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Display ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Displays</pluralLabel>
    <recordTypes>
        <fullName>EmptySpace</fullName>
        <active>true</active>
        <label>Empty Space</label>
    </recordTypes>
    <recordTypes>
        <fullName>Frame</fullName>
        <active>true</active>
        <label>Frame</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rack</fullName>
        <active>true</active>
        <label>Rack (MA)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>